# global-bt

./: .gitignore  .ic-assets.json5  ADVANCED_FEATURES.md  Cargo.toml  IMPLEMENTATION_SUCCESS.md  JUDGE_RESPONSE.md  LOCAL_DEVELOPMENT.md  MULTI_TENANT_FIXES.md  MULTI_TENANT_IMPLEMENTATION.md  README.md  canister_ids.json  deploy-frontend.sh  dfx.json  package-lock.json  package.json  structure.txt  test_advanced_features.sh  test_multi_tenant.sh
scripts/: local-deploy.sh
src/blocktrace-dapp-main-backend/: Cargo.toml  blocktrace-dapp-main-backend.did
src/blocktrace-dapp-main-backend/src/: lib.rs
src/blocktrace-frontend-main/: middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js
src/blocktrace-frontend-main/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  pagecopy.tsx
src/blocktrace-frontend-main/app/about/: page.tsx
src/blocktrace-frontend-main/app/add-step/: page.tsx
src/blocktrace-frontend-main/app/demo/: page.tsx
src/blocktrace-frontend-main/app/features/: page.tsx
src/blocktrace-frontend-main/app/home/: page.tsx
src/blocktrace-frontend-main/components/: ESGwidget.tsx  Hero.tsx  ICPDashboard.tsx  LandingPage.tsx  StepMap.tsx  TrackPage.tsx  footer.tsx
src/blocktrace-frontend-main/hooks/: useICP.ts
src/blocktrace-frontend-main/lib/: auth.ts  icp-service-enhanced.ts  icp-service.ts  nft-service.ts  pdf-utils.ts  useAuth.ts  utils.ts
src/blocktrace-frontend-main/types/: global.d.ts
src/nft-backend/: Cargo.toml  nft-backend.did
src/nft-backend/src/: lib.rs
(+15 files in other folders)
