[package]
name = "nft-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ic-stable-structures = "0.6"
once_cell = "1"
thiserror = "1"
anyhow = "1"


